# pydantic-graph-persistence

./: .gitignore  README.md  pyproject.toml
src/pydantic_graph_persistence/: __init__.py  latest.py
